# cxx-dopus-adf

./: .clang-format  .gitignore  .gitmodules  CHANGES.md  CMAKE_BUILD.md  CMakeLists.txt  CMakePresets.json  Directory.Build.targets  README.md  adf_typed_iterator.hh  adf_typed_list.hh  dllmain.cpp  dopus_wstring_view_span.hh  opusADF.cpp  opusADF.hpp  opusADF.sln  opusADF.vcxproj  stdafx.h  test_dopus_wstring_view_array.cpp  text_utils.cc  text_utils.hh
.github/workflows/: release.yml
src/: CMakeLists.txt
